[gd_scene load_steps=5 format=2]

[ext_resource path="res://AlgorithmScenes/Screen/length_c_is_one_popup.gd" type="Script" id=1]
[ext_resource path="res://AlgorithmScenes/Screen/PopupTheme.tres" type="Theme" id=2]
[ext_resource path="res://AlgorithmScenes/Screen/ErrorInPopupTheme.tres" type="Theme" id=3]

[sub_resource type="Animation" id=7]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.201 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[node name="LengthCIsOnePopup" type="WindowDialog"]
visible = true
margin_left = 524.122
margin_top = 233.47
margin_right = 1036.12
margin_bottom = 392.47
focus_neighbour_left = NodePath("YesButton")
focus_neighbour_right = NodePath("NoButton")
focus_neighbour_bottom = NodePath("YesButton")
focus_next = NodePath("YesButton")
focus_previous = NodePath("NoButton")
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "Confirmation"
script = ExtResource( 1 )

[node name="Explanation" type="Label" parent="."]
margin_left = 5.0
margin_top = 13.0
margin_right = 506.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
text = "Is the length of the Array C equal to 1?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorNotification" type="Label" parent="."]
visible = false
margin_left = 2.05951
margin_top = 112.692
margin_right = 503.06
margin_bottom = 138.692
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Error: Wrong answer"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ErrorNotification"]
anims/message_modulation = SubResource( 7 )

[node name="YesButton" type="Button" parent="."]
modulate = Color( 0.121569, 0.913725, 0, 1 )
margin_left = 115.407
margin_top = 63.2947
margin_right = 209.407
margin_bottom = 89.2947
focus_neighbour_top = NodePath("..")
focus_neighbour_right = NodePath("../NoButton")
focus_neighbour_bottom = NodePath("..")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("..")
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="."]
modulate = Color( 0.980392, 0.156863, 0.156863, 1 )
margin_left = 317.165
margin_top = 64.6618
margin_right = 411.165
margin_bottom = 90.6618
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_NoButton_pressed"]
